--- a/src/languages/pt-BR.json
+++ b/src/languages/pt-BR.json
@@ -236,9 +236,9 @@
   "nickname_too_long": "{{emote_warn}} Apelido tem muitos caracteres (`{{length}}`). Os apelidos são limitados a 32 caracteres",
   "ping_latency": "Latência do bot é **{{latency_bot}}ms**\nLatência do WebSocket é **{{latency_ws}}ms**",
   "uptime_uptime": "O tempo de atividade é **{{uptime}}**",
-  "license_license": "📜 Este bot é licenciado sob a licença do Attribution-NonCommercial-NoDerivatives 4.0 International (CC BY-NC-ND 4.0), para mais informações veja a licença completa **[aqui](https://github.com/TestersQTs/Bulbbot/blob/master/LICENSE)**",
-  "privacy_policy": "📜 Veja a política de privacidade do bot **[aqui](https://bulbbot.mrphilip.xyz/privacy-policy)**",
-  "github_source_code": "{{emote_github}} Bulbbot é um projeto totalmente de código aberto. Você pode encontrar o código fonte em nosso repositório GitHub **[aqui](https://github.com/TestersQTs/Bulbbot)**",
+  "license_license": "📜 Este bot é licenciado sob a licença do Attribution-NonCommercial-NoDerivatives 4.0 International (CC BY-NC-ND 4.0), para mais informações veja a licença completa **[aqui](https://github.com/TeamBulbbot//Bulbbot/blob/master/LICENSE)**",
+  "privacy_policy": "📜 Veja a política de privacidade do bot **[aqui](https://docs.bulbbot.rocks/privacy-policy/)**",
+  "github_source_code": "{{emote_github}} Bulbbot é um projeto totalmente de código aberto. Você pode encontrar o código fonte em nosso repositório GitHub **[aqui](https://github.com/TeamBulbbot//Bulbbot)**",
   "invite_content": "Links para convidar Bulbbot para seu servidor",
   "remind_list_none": "{{emote_warn}} Você não definiu nenhum lembrete",
   "remind_placeholder": "Nenhum Lembrete Selecionado",
@@ -301,6 +301,6 @@
   "infraction_interaction_reply": "{{emote_warn}} **{{target.tag}}'s** `({{target.id}})` infrações",
   "infraction_interaction_placeholder": "Nenhuma Infração Selecionada",
   "infraction_interaction_description": "Clique para ver mais informação",
-  "commands_help": "Você pode encontrar todos os comandos que o Bulbbot oferece **[aqui](https://docs.bulbbot.mrphilip.xyz/command-list)**",
-  "help_unable_to_find_command": "`{{commandName}}` não é um comando válido, para uma lista completa de comandos visite nosso website <https://docs.bulbbot.mrphilip.xyz/command-list>"
+  "commands_help": "Você pode encontrar todos os comandos que o Bulbbot oferece **[aqui](https://docs.bulbbot.rocks/command-list)**",
+  "help_unable_to_find_command": "`{{commandName}}` não é um comando válido, para uma lista completa de comandos visite nosso website <https://docs.bulbbot.rocks/command-list>"
 }
