--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -271,35 +271,35 @@
   "banpool_create_log": "{{emote_success}} **{{user.tag}}** `({{user.id}})` created a new banpool with the name **{{name}}**",
   "banpool_create_success": "{{emote_success}} Successfully created a new banpool with the name of **{{name}}**",
 
-  "banpool_delete_message": "Are you sure you want to delete this banpool?",
+  "banpool_delete_message": "{{emote_warn}} Are you sure you want to delete this banpool? This action __**cannot**__ be undone.",
   "banpool_delete_success_log": "{{emote_success}} **{{user.tag}}** `({{user.id}})` deleted a banpool with the name **{{name}}**",
   "banpool_delete_success": "{{emote_success}} Successfully deleted the banpool",
 
   "banpool_info_top": "Banpool data from {{name}} | Servers subscribed: {{amountOfServers}}",
-  "banpool_info_desc": "**Server Id:** `{{guildId}}`\n**Joined:** <t:{{createdAt}}> (<t:{{createdAt}}:R>)",
+  "banpool_info_desc": "**Server ID:** `{{guildId}}`\n**Joined:** <t:{{createdAt}}> (<t:{{createdAt}}:R>)",
 
   "banpool_invite_message": "Press the green button to generate your banpool invite code",
   "banpool_invite_success_log": "{{emote_success}} **{{user.tag}}** `({{user.id}})` created a banpool invite for **{{name}}** that expires <t:{{expireTime}}:R>",
   "banpool_invite_reply": "Here is your banpool code `{{code}}` for the **{{name}}** banpool. Keep it safe until the other server uses it to join. It will expire <t:{{expireTime}}:R> and only has **one** use. The other server can use the `banpool join {{code}}` command to join the pool",
 
-  "banpool_join_unable_to_find": "{{emote_warn}} Unable an invite with that code",
+  "banpool_join_unable_to_find": "{{emote_warn}} Unable to find an invite with that code",
   "banpool_join_own_guild": "{{emote_warn}} You can't join your own banpool",
   "banpool_join_error": "{{emote_fail}} Something went wrong trying to join the banpool, try again or wait a bit",
   "banpool_join_log_og": "{{emote_success}} **{{user.tag}}** `({{user.id}})` joined our banpool with the name **{{invite.banpool.name}}** in **{{guild.name}}** `({{guild.id}})` invited by **{{invite.inviter.tag}}** `({{invite.inviter.id}})`",
   "banpool_join_log": "{{emote_success}} **{{user.tag}}** `({{user.id}})` joined a new banpool from **{{invite.guild.name}}** `({{invite.guild.id}})` with the name **{{invite.banpool.name}}** invited by **{{invite.inviter.tag}}** `({{invite.inviter.id}})`",
   "banpool_join_success": "{{emote_success}} Successfully joined the banpool",
 
-  "banpool_leave_own": "{{emote_warn}} You are not able to leave your own banpool, you have to delete it",
+  "banpool_leave_own": "{{emote_warn}} You are not able to leave your own banpool, you have to delete it instead",
   "banpool_leave_not_found": "{{emote_warn}} Unable to find a banpool with that name",
   "banpool_leave_log_og": "{{emote_warn}} **{{user.tag}}** `({{user.id}})` left the banpool with the name **{{name}}** in **{{guild.name}}** `({{guild.id}})`",
   "banpool_leave_log": "{{emote_warn}} **{{user.tag}}** `({{user.id}})` left the banpool with the name **{{name}}**",
-  "banpool_leave_success": "{{emote_success}} Successfully left the banpool",
+  "banpool_leave_success": "{{emote_success}} Successfully left the selected banpool",
 
   "banpool_remove_not_found": "{{emote_warn}} Unable to find a banpool with that name",
-  "banpool_remove_message": "Are you sure you want to remove that server from the banpool?",
+  "banpool_remove_message": "{{emote_warn}} Are you sure you want to remove that server from the banpool?",
   "banpool_remove_log_kicked": "{{emote_warn}} Your server has been removed from the banpool with the name **{{name}}**",
   "banpool_remove_log": "{{emote_warn}} **{{user.tag}}** `({{user.id}})` removed the server **{{guild.name}}** `({{guild.id}})` from the banpool **{{name}}**",
-  "banpool_remove_success": "{{emote_success}} Successfully removed that server",
+  "banpool_remove_success": "{{emote_success}} Successfully removed the selected server",
 
   "already_banned": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` has already been banned for `{{reason}}`",
   "not_banned": "{{emote_fail}} **{{target.tag}}** `({{target.id}})` is not banned from the server!",
