--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -264,7 +264,8 @@
     "warn": "warn"
   },
 
-  "crossban_success": "{{emote_success}} Successfully banned **{{target.tag}}** `({{target.id}})` in {{totalBans}}/{{totalPossible}} servers",
+  "crossban_success": "{{emote_success}} Successfully banned **{{target.tag}}** `({{target.id}})` in {{totalBans}}/{{totalPossible}} servers. Banpools used: {{usedPools}}",
+  "crossban_select_pools": "Select the banpools where you want the user to get banned from." ,
   "crossban_reason": "{{emoji}} **{{target.tag}}** `({{target.id}})` has been crossbanned from **{{guild.name}}** `({{guild.id}})` by **{{moderator.tag}}** `({{moderator.id}})` for **{{reason}}** `[#{{infraction_id}}]`",
   "crossban_reason_audit": "Crossban from: {{guild.name}} ({{guild.id}}) | Moderator: {{moderator.tag}} ({{moderator.id}}) | Reason: {{reason}}",
 
