added some more data to the serverinfo command

--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -251,9 +251,11 @@
   "serverinfo_channel_stats": "**Channel stats**",
   "serverinfo_booster_stats": "**Booster stats**",
   "serverinfo_server_stats_total": "Total: **{{guild.memberCount}}**/{{guild.maximumMembers}}\n",
-  "serverinfo_channel_stats_voice": "Voice Channels: **{{guild_voice}}**\n",
-  "serverinfo_channel_stats_text": "Text Channels: **{{guild_text}}**\n",
-  "serverinfo_channel_stats_category": "Category: **{{guild_category}}**\n",
+  "serverinfo_channel_stats_voice": "{{emote_voice}} **{{guild_voice}}**\n",
+  "serverinfo_channel_stats_text": "{{emote_text}} **{{guild_text}}**\n",
+  "serverinfo_channel_stats_announcement": "{{emote_announcement}} **{{guild_announcement}}**\n",
+  "serverinfo_channel_stats_stage": "{{emote_stage}} **{{guild_stage}}**\n",
+  "serverinfo_channel_stats_category": "{{emote_category}} **{{guild_category}}**\n",
   "serverinfo_booster_tier": "Booster Tier: **{{guild.premiumTier}}**\n",
   "serverinfo_booster_boosters": "Boosters: **{{guild.premiumSubscriptionCount}}**\n",
   "serverinfo_booster_tier_1": "Emote slots: **100**\nAudio quality: **128** kbps\n",
