--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -334,6 +334,11 @@
   "purge_message_not_found": "{{emote_fail}} Unable to find that message in this channel",
   "purge_message_failed_to_delete": "{{emote_fail}} Where unable to find the message you wanted to delete, was able to delete all of the messages before",
 
+  "prune_no_users": "{{emote_fail}} There are no users that can be pruned with those settings",
+  "prune_confirm_prune": "Are you sure you want to prune **{{prunesize}}** users?",
+  "prune_successful": "{{emote_success}} Successfully pruned **{{prune}}** members",
+  "prune_log": "{{emote_success}} **{{user.tag}}** `({{user.id}})` pruned **{{prune}}** members for **{{reason}}** with these settings, days **{{days}}**, roles **{{roles}}**",
+
   "verification_level_select": "Please select your verification level then press save",
   "verification_level_success": "{{emote_success}} Server verification level changed to `{{level}}`",
 
