--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -393,6 +393,8 @@
   "inviteinfo_channel_name": "Name: `{{invite.channel.name}}`\n",
   "inviteinfo_channel_nsfw": "NSFW: `{{invite.channel.nsfw}}`\n",
 
+  "id_no_found": "{{emote_warn}} Unable to find any ids in that message",
+
   "roleinfo_unable_to_find": "{{emote_warn}} Unable to find that role",
 
   "messageinfo_unable_to_find": "{{emote_warn}} Unable to find that message",
