--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -12,6 +12,7 @@
     "member": "member",
     "role": "role",
     "channel": "channel",
+    "message": "message",
     "lang": "language",
     "cmd": "command",
     "emoji": "emoji",
@@ -331,11 +332,10 @@
   "purge_too_many": "{{emote_fail}} Can only purge a max of 500 messages at a time",
   "purge_too_few": "{{emote_fail}} You cannot purge less than 2 messages",
   "purge_success": "{{emote_success}} Successfully purged **{{count}}** messages",
-  "purge_message_not_found": "{{emote_fail}} Unable to find that message in this channel",
-  "purge_message_failed_to_delete": "{{emote_fail}} Where unable to find the message you wanted to delete, was able to delete all of the messages before",
+  "purge_message_failed_to_delete": "{{emote_fail}} Was unable to find the message you wanted to delete. No messages were deleted past this point.",
 
   "prune_no_users": "{{emote_fail}} There are no users that can be pruned with those settings",
-  "prune_confirm_prune": "Are you sure you want to prune **{{prunesize}}** users?",
+  "prune_confirm_prune": "{{emote_warn}} Are you sure you want to prune **{{prunesize}}** members?",
   "prune_successful": "{{emote_success}} Successfully pruned **{{prune}}** members",
   "prune_log": "{{emote_success}} **{{user.tag}}** `({{user.id}})` pruned **{{prune}}** members for **{{reason}}** with these settings, days **{{days}}**, roles **{{roles}}**",
 
@@ -393,13 +393,7 @@
   "inviteinfo_channel_name": "Name: `{{invite.channel.name}}`\n",
   "inviteinfo_channel_nsfw": "NSFW: `{{invite.channel.nsfw}}`\n",
 
-  "id_no_found": "{{emote_warn}} Unable to find any ids in that message",
-
-  "roleinfo_unable_to_find": "{{emote_warn}} Unable to find that role",
-
-  "messageinfo_unable_to_find": "{{emote_warn}} Unable to find that message",
-  
-  "channelinfo_unable_to_find": "{{emote_warn}} Unable to find that channel",
+  "id_no_found": "{{emote_warn}} UWas unable to find any IDs in the provided message.",
 
   "deafen_already_deaf": "{{emote_fail}} **{{target.tag}}** `({{target.id}})` is already deafened!",
   "undeafen_not_deaf": "{{emote_fail}} **{{target.tag}}** `({{target.id}})` is not deafened!",
