--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -320,10 +320,10 @@
   "ban_force_confirm": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` is not currently in the server. Do you want me to force-ban them anyway?",
 
   "messageclear_few_than_0days": "{{emote_fail}} You can't clear messages that are younger than 0 days",
-  "messageclear_more_than_30days": "{{emote_fail}} You can't clear messages that are older than 30 days.",
-  "messageclear_found_no_message": "{{emote_fail}} Unable to find any messages within that timeperiod",
-  "messageclear_about_to_clear": "{{emote_fail}} You are about to clear **{{messages}}** messages from the database",
-  "messageclear_success_delete": "{{emote_success}} Deleted those messages from the database",
+  "messageclear_more_than_30days": "{{emote_fail}} You can't clear messages that are older than 30 days. (We already do that automatically)",
+  "messageclear_found_no_message": "{{emote_fail}} Unable to find any messages within that time period",
+  "messageclear_about_to_clear": "{{emote_fail}} Are you sure you want to remove **{{messages}}** messages from the database?",
+  "messageclear_success_delete": "{{emote_success}} Successfully deleted **{{messages}}** messages from the database",
 
   "purge_too_many": "{{emote_fail}} Can only purge a max of 99 messages at a time",
   "purge_too_few": "{{emote_fail}} You cannot purge less than 2 messages",
