--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -289,7 +289,7 @@
 	"banpool_missing_access_not_found": "{{emote_warn}} That pool does not exists our you are missing access to view it",
 	"banpool_missing_logging": "{{emote_fail}} You need to configure a banpool logging channel before running this command. Use the `configure logging banpool_logs <channel>` command to setup a logging channel.",
 
-	"banpool_create_name_exists": "{{emote_warn}} Please choice another name for the banpool",
+	"banpool_create_name_exists": "{{emote_warn}} That banpool name already exists, please choose another one",
 	"banpool_create_log": "{{emote_success}} **{{user.tag}}** `({{user.id}})` created a new banpool with the name **{{name}}**",
 	"banpool_create_success": "{{emote_success}} Successfully created a new banpool with the name of **{{name}}**",
 
