--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -6,6 +6,7 @@
 	"global_not_invoked_by_user": "{{emote_lock}} You did not invoke this command",
 	"global_missing_permissions_bot": "The bot is missing crucial permissions to perform this command. Please check the bot's permissions.\n{{missing}}",
 	"global_cannot_convert": "{{emote_fail}} Cannot convert `{{arg_provided}}` to `{{arg_expected}}`.\n{{emote_wrench}} **Correct usage:** {{usage}}",
+	"global_cannot_convert_special": "{{emote_fail}} Cannot convert `{{arg_provided}}` to `{{arg_expected}}`.",
 	"global_not_found": "{{emote_fail}} Could not find the specified {{type}}. Cannot convert `{{arg_provided}}` to `{{arg_expected}}`.\n{{emote_wrench}} **Correct usage:** {{usage}}",
 	"global_not_found_types": {
 		"user": "user",
@@ -134,13 +135,59 @@
 		"GUILD_STAGE_VOICE": "stage channel",
 		"UNKNOWN": "channel"
 	},
+	"config_button_enable": "Enable",
+	"config_button_disable": "Disable",
+	"config_button_back": "Back",
+
+	"config_main_header": "{{emote_wrench}} Bulbbot Configuration for **{{guild.name}}** `({{guild.id}})`",
+	"config_main_option_actions_on_info": "Actions on Info",
+	"config_main_option_language": "Language",
+	"config_main_option_prefix": "Prefix",
+	"config_main_option_roles_on_leave": "Roles on Leave",
+	"config_main_placeholder": "Select a category to modify",
+
+	"config_actions_on_info_header": "{{emote_wrench}} **Actions on Info Configuration**\n{{emote_edit}}*This setting controls whether or not action buttons will be displayed when you info a user.*",
+	"config_roles_on_leave_header": "{{emote_wrench}} **Roles on Leave Configuration**\n{{emote_edit}}*This setting controls whether or not the bot will log user's roles when they leave the server.*",
+
+	"config_language_header": "{{emote_wrench}} **Language Configuration**\n{{emote_edit}}*This setting controls the language that the bot will use when responding to commands.*",
+	"config_language_placeholder": "Select a language",
+	"config_language_success": "{{emote_success}} Successfully changed the server language to `{{language}}`",
+
+	"config_autorole_header": "{{emote_wrench}} **Autorole Configuration**\n{{emote_edit}}*This setting controls whether or not the bot will automatically assign a role to a user when they join the server.*",
+	"config_autorole_placeholder": "Current Autorole: {{role.name}} ({{role.id}})",
+	"config_autorole_placeholder_disabled": "Currently disabled",
+	"config_autorole_prompt": "{{emote_wrench}} Please enter the role ID/mention the new Autorole",
+	"config_autorole_disable": "{{emote_success}} Successfully disabled the Autorole",
+	"config_autorole_success": "{{emote_success}} Successfully changed the Autorole to **{{role.name}}**",
+	"config_autorole_button_change": "Change Autorole",
+	"config_autorole_button_disable": "Disable Autorole",
+
+	"config_quick_reasons_header": "{{emote_wrench}} **Quick Reasons Configuration**\n{{emote_edit}}*This setting controls all the quick reasons shown when using context commands.*",
+	"config_quick_reasons_placeholder_select": "Select Quick Reason(s) to remove",
+	"config_quick_reason_placeholder_none": "No Quick Reasons found",
+	"config_quick_reason_prompt": "{{emote_wrench}} Please enter the new Quick Reason",
+	"config_quick_reason_too_long": "{{emote_fail}} The Quick Reason cannot be longer than **100** characters",
+	"config_quick_reason_already_exists": "{{emote_fail}} The Quick Reason `{{reason}}` already exists in the list",
+	"config_quick_reason_success": "{{emote_success}} Successfully added the Quick Reason `{{reason}}` to the list",
+	"config_quick_reason_remove_success": "{{emote_success}} Successfully removed the selected Quick Reason(s) from the list",
+	"config_quick_reason_button_add": "Add Quick Reason",
+	"config_quick_reason_button_remove": "Remove Quick Reason(s)",
+
+	"config_timezone_header": "{{emote_wrench}} **Timezone Configuration**\n{{emote_edit}}*This setting controls the timezone that the bot will use when sending logs.*",
+	"config_timezone_placeholder": "Current Timezone: {{timezone}}",
+	"config_timezone_success": "{{emote_success}} Successfully changed the server timezone to `{{timezone}}`",
+
+	"config_prefix_header": "{{emote_wrench}} **Prefix Configuration**\n{{emote_edit}}*This setting controls the prefix that the bot will listen to when using commands.*",
+	"config_prefix_prompt": "{{emote_wrench}} Please enter a new prefix",
+	"config_prefix_reset": "{{emote_success}} The prefix has been reset to `!`",
+	"config_prefix_success": "{{emote_success}} Successfully changed the server prefix to `{{prefix}}`",
+	"config_prefix_too_long": "{{emote_fail}} The selected prefix is too long. Please make the prefix shorter than 255 characters.",
+	"config_prefix_button_change": "Change Prefix",
+	"config_prefix_button_reset": "Reset Prefix",
 
 	"config_generic_success": "{{emote_success}} Successfully updated the `{{setting}}` setting to `{{value}}`",
 	"config_generic_success_add": "{{emote_success}} Successfully added `{{value}}` to `{{setting}}`",
 	"config_generic_success_remove": "{{emote_success}} Successfully removed `{{value}}` from `{{setting}}`",
-
-	"config_language_success": "{{emote_success}} Successfully changed the server language to `{{language}}`",
-	"config_timezone_success": "{{emote_success}} Successfully changed the server timezone to `{{timezone}}`",
 
 	"config_logging_success": "{{emote_success}} Successfully started logging `{{logging_type}}` in <#{{channel}}>",
 	"config_logging_remove": "{{emote_success}} Successfully removed logging for `{{logging_type}}` from <#{{channel}}>",
@@ -152,12 +199,6 @@
 
 	"config_mute_success": "{{emote_success}} Successfully updated the mute role",
 	"config_mute_unable_to_manage": "{{emote_fail}} The bot is unable to manage the selected role. Move the bot's role higher than the selected role.",
-
-	"config_prefix_success": "{{emote_success}} Successfully changed the server prefix to `{{prefix}}`",
-	"config_prefix_too_long": "{{emote_fail}} The selected prefix is too long. Please make the prefix shorter than 255 characters.",
-
-	"config_autorole_success": "{{emote_success}} Successfully changed the autorole to **{{role}}**",
-	"config_autorole_disable": "{{emote_success}} Successfully disabled the autorole",
 
 	"config_quick_reasons_already_in_list": "{{emote_fail}} The reason `{{reason}}` is already in the list.",
 	"config_quick_reasons_not_found": "{{emote_fail}} The reason `{{reason}}` was not found.",
