--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -218,7 +218,9 @@
 	"automod_violation_website_reason": "Violated `FORBIDDEN_WEBSITE` check in #{{channel.name}}",
 	"automod_violation_website_log": "{{emote_warn}} **{{target.tag}}** `({{target.id}})` has violated the `FORBIDDEN_WEBSITE` check in <#{{channel.id}}> | Punishment: **{{punishment}}**\n```{{message}}```",
 
+	"jumbo_start": "{{emote_loading}} Starting this might take a while",
 	"jumbo_too_many": "{{emote_warn}} Too many emojis provided. The bot currently only supports a max of 10 emojis at a time.",
+	"jumbo_too_many_aniamted": "{{emote_warn}} Due to the package we are using you are not able to jumbo more than 1 animated emoji each time.",
 	"jumbo_invalid": "{{emote_fail}} Invalid emoji(s) provided. Please use a valid emoji.",
 
 	"userinfo_embed_id": "**ID:** {{user.id}}\n",
