--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -291,6 +291,7 @@
 
 	"action_success_multi": "{{emote_success}} {{full_list}} have been {{action}} for **{{reason}}**",
 	"action_multi_less_than_2": "{{emote_warn}} Selected less than 2 targets. Executing normal {{action}} instead",
+	"action_multi_no_targets": "{{emote_fail}} No valid targets were found in your message.\n{{emote_wrench}} **Correct usage:** {{usage}}",
 	"action_multi_types": {
 		"ban": "ban",
 		"kick": "kick",
